<resources>

    <string name="app_name">MSDM</string>

    <!-- drawer -->
    <string name="drawer_home">Home</string>
    <string name="drawer_connection_status">Connection status</string>
    <string name="drawer_console_output">Console output</string>
    <string name="drawer_google_maps">Google Maps</string>
    <string name="drawer_car_control">Car Control</string>

    <!-- start fragment -->
    <string name="start_launch">Start</string>
    <string name="start_alarm">Disable Alarm</string>
    <string name="start_disconnect">Disconnect</string>
    <string name="start_disconnecting">Disconnecting…</string>
    <string name="start_searching">Searching…</string>
    <string name="start_connecting">Connecting…</string>
    <string name="start_connecting_success">Connected!</string>
    <string name="start_disconnected_success">Disconnected!</string>
    <string name="start_bluetooth_error">Bluetooth is turned off.</string>

    <!-- console fragment -->
    <string name="hello_world">Hello world!</string>
    <string name="console_clear_logs">Clear Logs</string>
    <string name="console_custom_message">Custom Message</string>

    <!-- status fragment-->
    <string name="status_status">Status:</string>
    <string name="status_visibility">Visibility:</string>
    <string name="status_visibility_default">Unknown</string>
    <string name="status_connection">Connection:</string>
    <string name="status_time">Time elapsed:</string>

    <!-- gps -->
    <string name="gps_start">Start GPS</string>
    <string name="gps_stop">Stop GPS</string>
    <string name="gps_clear">Clear location</string>

    <!-- car control fragment -->
    <string name="car_control_speed">Speed:</string>
    <string name="car_control_direction">Direction:</string>
    <string name="car_control_start">Start</string>
    <string name="car_control_reset">Reset</string>
    <string name="car_control_pause">Pause</string>
    <string name="car_control_area">Area</string>
    <string name="car_control_left">left</string>
    <string name="car_control_right">right</string>
    <string name="car_control_straight">straight</string>
    <string name="car_control_zero">0</string>
    <string name="car_control_error">Not connected!</string>

</resources>
