<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewStyleSmallPadding"
                    android:text="@string/status_status"/>

                <TextView
                    style="@style/TextViewStyleSmallPadding"
                    android:text="@string/status_visibility"/>

                <TextView
                    style="@style/TextViewStyleSmallPadding"
                    android:text="@string/status_connection"/>

                <TextView
                    style="@style/TextViewStyleSmallPadding"
                    android:text="@string/status_time"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/status_status"
                    style="@style/TextViewStyleSmallPadding"
                    android:textColor="@color/subtext_color"
                    tools:text="Searching for PI"/>

                <TextView
                    android:id="@+id/status_visibility"
                    style="@style/TextViewStyleSmallPadding"
                    android:textColor="@color/subtext_color"
                    android:text="@string/status_visibility_default"/>

                <TextView
                    android:id="@+id/status_connection"
                    style="@style/TextViewStyleSmallPadding"
                    android:textColor="@color/subtext_color"
                    tools:text="Established"/>

                <TextView
                    android:id="@+id/status_time"
                    style="@style/TextViewStyleSmallPadding"
                    android:textColor="@color/subtext_color"
                    tools:text="12 min"/>

            </LinearLayout>

        </FrameLayout>

    </ScrollView>

</LinearLayout>